// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eval of strings: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    (eval \\"hello\\")
  ",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": "hello",
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`incorrect use of apply throws error (insufficient arguments): expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    (apply)
  ",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Expected 2 arguments, but got 0.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`incorrect use of apply throws error (last argument not a list): expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    (apply + 1 2 3)
  ",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Error: Last argument of apply must be a list",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`multi-operand apply: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    (define args '(1 2 3 4 5))
    (apply + 6 7 8 9 10 args)
  ",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": SchemeInteger {
    "numberType": 1,
    "value": 55n,
  },
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;

exports[`two-operand apply: expectResult 1`] = `
Object {
  "alertResult": Array [],
  "code": "
    (define args '(1 2))
    (apply + args)
  ",
  "displayResult": Array [],
  "numErrors": 0,
  "parsedErrors": "",
  "result": SchemeInteger {
    "numberType": 1,
    "value": 3n,
  },
  "resultStatus": "finished",
  "visualiseListResult": Array [],
}
`;
